fixed tooltip placement - as it was slightly misaligned to the right of the tooltip indicator
Changelog: None

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -896,7 +896,6 @@ ul.link-list {
   pointer-events: auto !important;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.15);
   text-align: left;
-  margin-left: 6px !important;
   max-width: 600px;
   color: @textsecondary !important;
   &.info {
